refactor: :recycle: Change urls of items apis
